# esp32-irrigation

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  Makefile  README.md  doctor.config.json  extra_script.py  no_ota.csv  partitions.csv  platformio.ini  sdkconfig.defaults
data/: index.html
data/static/: index-D3LfnKfu.js  index-DonX9oAe.css
docs/: FLASHING.md  OTA_PARTITION_PLAN.md  PLAN.md  parts_list.md  schematics.md
hardware-docs/: ESP32-C6-Relay-8CH-Documentation.md  Sprzet-Nawadniania-Documentation.md
main/: CMakeLists.txt  app_config.c  app_config.h  app_main.c  idf_component.yml  mqtt_client.c  mqtt_client.h  time_sync.c  time_sync.h  web_server.c  web_server.h  wifi_mgr.c  wifi_mgr.h  zones.c  zones.h
src/: main.cpp
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/api/: esp32.ts
web/src/components/: Header.tsx  OtaUpload.tsx  ScheduleTable.tsx  StatusBar.tsx  ZoneCard.tsx  ZoneGrid.tsx
web/src/types/: index.ts
